--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 
 # FastAPI Server Configuration
 FASTAPI_HOST=0.0.0.0
-FASTAPI_PORT=8000
+PORT=8000
 FASTAPI_RELOAD=false
 
 # Gemini API Key (if using Gemini LLM)
