--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 # Supabase Configuration
 # Copy this file to .env and fill in your actual values
-
+REDIS_HOST=redis-17316.c330.asia-south1-1.gce.redns.redis-cloud.com
+REDIS_PORT=17316
+REDIS_USERNAME=default
+REDIS_PASSWORD=QVoPG0oMdB7i7L9TU7qfNB08vRRRrxKm
+REDIS_DB=0
+SESSION_TTL_SECONDS=1200
 # Supabase URL (required)
 SUPABASE_URL=https://ibnsjeoemngngkqnnjdz.supabase.co
 NEXT_PUBLIC_SUPABASE_URL=https://ibnsjeoemngngkqnnjdz.supabase.co
